--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"chalk": "^5.3.0",
 		"figlet": "^1.6.0",
 		"gradient-string": "^2.0.2",
-		"inquirer": "^9.2.11"
+		"inquirer": "^9.2.11",
+		"nanospinner": "^1.1.0"
 	},
 	"devDependencies": {
 		"@types/figlet": "^1.5.6",
