--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"figlet": "^1.6.0",
 		"gradient-string": "^2.0.2",
 		"inquirer": "^9.2.11",
+		"moment": "^2.29.4",
 		"nanospinner": "^1.1.0"
 	},
 	"devDependencies": {
