--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
 	"main": "app.ts",
 	"type": "module",
 	"scripts": {
-		"dev": "nodemon --exec node --loader ts-node/esm src/app.ts",
-		"start": "node --loader ts-node/esm src/app.ts"
+		"dev": "tsx --watch src/app.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.7.2",
 		"chalk": "^5.3.0",
+		"express": "^4.19.2",
+		"express-file-routing": "^3.0.3",
 		"figlet": "^1.6.0",
 		"gradient-string": "^2.0.2",
 		"inquirer": "^9.2.11",
@@ -20,12 +22,12 @@
 		"nanospinner": "^1.1.0"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.21",
 		"@types/figlet": "^1.5.6",
 		"@types/gradient-string": "^1.1.3",
 		"@types/inquirer": "^9.0.3",
 		"@types/node": "^20.7.1",
-		"nodemon": "^3.0.1",
-		"ts-node": "^10.9.1",
+		"tsx": "^4.16.2",
 		"typescript": "^5.2.2"
 	}
 }
