--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
 	"compilerOptions": {
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
 		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
-		"strict": true,
-		"skipLibCheck": true,
-		"verbatimModuleSyntax": true
+		"paths": {
+			"@/*": ["./src/*"]
+		}
 	}
 }
