--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@inquirer/confirm": "^3.1.15",
+		"@inquirer/input": "^2.2.2",
+		"@inquirer/select": "^2.3.11",
 		"axios": "^1.7.2",
 		"chalk": "^5.3.0",
 		"express": "^4.19.2",
 		"express-file-routing": "^3.0.3",
 		"figlet": "^1.6.0",
 		"gradient-string": "^2.0.2",
-		"inquirer": "^9.2.11",
 		"moment": "^2.29.4",
 		"nanospinner": "^1.1.0"
 	},
@@ -31,4 +33,3 @@
 		"typescript": "^5.2.2"
 	}
 }
-
