Only allow player to buy one of each special item

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
 	"compilerOptions": {
+		"outDir": "dist/src",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
 		"paths": {
